added if posts not equal nil in home

--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -1,3 +1,4 @@
+<% if @posts != nil %>
     <div>
     <% @posts.each do |x| %>
     
@@ -15,3 +16,4 @@
     </div>
 		<% end %>
     </div>
+<% end %>
