--- a/app/views/meetups/index.erb
+++ b/app/views/meetups/index.erb
@@ -7,5 +7,8 @@
 </br>
 <% end %>
 
+<%= link_to 'Back to home gallery', root_path %>
 
+<% if logged_in? %>
 <%= link_to 'Back to profile', user_path(current_user) %>
+<% end %>
